donation page added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Thai Street Paws
 donation-banner_image: /images/TSP-3.jpg
 paypal_url: https://www.paypal.com/paypalme/thaistreetpawsrescue
+wise_url: https://wise.com/pay/me/tamaraj88
+k9aid_url: https://www.paypal.com/donate/?hosted_button_id=WL7MNT9AJMF74
 dog-sanctuary_image: /images/TSP-6.jpg
 seo:
   title:
