--- a/help.html
+++ b/help.html
@@ -1,8 +1,6 @@
 ---
 layout: default
 title: How you can help
-sponsor_url: https://www.paypal.com/paypalme/thaistreetpawsrescue
-donation_url: https://www.paypal.com/paypalme/thaistreetpawsrescue
 volunteer_image: /images/TSP-6.jpg
 donate_image: /images/TSP-5.jpg
 flight-volunteer_image: /images/TSP-3.jpg
@@ -29,7 +27,7 @@ seo:
     <div class="col-6_md-12-middle padded-sm sm-padded">
         <h3>Sponsor a dog</h3>
         <p>Help pay for veterinary care and food for one of our dogs - weekly, monthly or one-off.</p>
-        <a href="{{page.sponsor_url}}" class="margin-t-1 button" target="_blank">Sponsor</a>
+        <a href="/donate.html" class="margin-t-1 button">Sponsor</a>
     </div>
     <!-- volunteer -->
     <div class="col-6_md-12-middle padded-sm md-bg sm-padded">
@@ -54,7 +52,7 @@ seo:
     <div class="col-6_md-12-middle padded-sm md-bg sm-padded">
         <h3>Make a donation</h3>
         <p>Help us continue to provide life-saving care for street dogs in Thailand. Your donation directly supports their medical treatment, food, and daily needs. Whether it's a one-time gift or a monthly contribution, your generosity makes a real difference in the lives of the dogs we rescue.</p>
-        <a href="{{page.donation_url}}" class="button margin-t-1" target="_blank"> Donate</a>
+        <a href="/donate.html" class="button margin-t-1"> Donate</a>
     </div>
     <div class="col-6 md-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.donate_image}}');"></div>
@@ -71,14 +69,8 @@ seo:
 
         <div class="grid default-hide" id="social-share">
             <nav class="social-share col-6_md-5_xs-12 md-left">
-                <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.data.site-settings.social.twitter_username }}&related={{ site.data.site-settings.social.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter" class="xs-margin-l-0">
-                    <i class="fab fa-twitter md-size"></i>
-                </a>
                 <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">
                     <i class="fab fa-facebook-f md-size"></i>
-                </a>
-                <a href="http://pinterest.com/pin/create/link/?url={{page.url}}&description={{page.title}}&image={{page.social_image}}" rel="nofollow" target="_blank" title="Share on Pinterest">
-                <i class="fab fa-pinterest-p md-size"></i>
                 </a>
             </nav>
         </div>
