--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@ seo:
         <!-- contact form -->
         <div class="col-7_sm-12 sm-padded">
 
-            <form>
+            <form action="https://formspree.io/f/mzzzrogr"
+            method="POST">
   
                 <label for="_name"> Your Name </label>
                 <input class="form2" type="text" name="_name" id="_name" placeholder="Name" />
