--- a/all-dogs.html
+++ b/all-dogs.html
@@ -4,637 +4,637 @@ title: Our Dogs
 dogs:
    -
       name: Chilli
-      age:
+      rescued-in: 2020
       dog_image: /images/dogs/dog1.webp
       female: false
       male: true
    -
       name: Dee
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog2.webp
       female: false
       male: false
    -
       name: Myla
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog3.webp
       female: true
       male: false
    -
       name: Dixie
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog4.webp
       female: true
       male: false
    -
       name: Casper
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog5.webp
       female: false
       male: true
    -
       name: Rein
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog6.webp
       female: false
       male: false
    -
       name: Fraser
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog7.webp
       female: false
       male: true
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog8.webp
       female: true
       male: false
    -
       name: Bali
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog9.webp
       female: true
       male: false
    -
       name: Sam
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog10.webp
       female: false
       male: true
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog11.webp
       female: false
       male: false
    -
       name: Ludo
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog12.webp
       female: false
       male: false
    -
       name: Archie
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog13.webp
       female: false
       male: true
    -
       name: Lucy
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog14.webp
       female: true
       male: false
    -
       name: Ralph
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog16.webp
       female: false
       male: true
    -
       name: Ashleigh
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog17.webp
       female: true
       male: false
    -
       name: Harvey
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog18.webp
       female: false
       male: true
    -
       name: Maya
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog19.webp
       female: true
       male: false
    -
       name: Friday
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog20.webp
       female: false
       male: true
    -
       name: Theo
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog21.webp
       female: false
       male: true
    -
       name: Izzy
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog22.webp
       female: true
       male: false
    -
       name: Red
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog23.webp
       female: true
       male: false
    -
       name: Pax
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog24.webp
       female: false
       male: true
    -
       name: Tiernan
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog25.webp
       female: false
       male: true
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog26.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog27.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog28.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog29.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog30.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog31.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog32.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog33.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog34.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog35.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog36.webp
       female: true
       male: false
    -
       name: Ruby
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog37.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog38.webp
       female: true
       male: false
    -
       name: Nadia
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog39.webp
       female: true
       male: false
    -
       name: Saffron
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog40.webp
       female: true
       male: false
    -
       name: Boo
-      age: '1'
+      rescued-in: '1'
       dog_image: /images/dogs/dog41.webp
       female: false
       male: true
    -
       name: Joey
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog42.webp
       female: false
       male: true
    -
       name: Yuki
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog43.webp
       female: false
       male: true
    -
       name: Diesal
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog44.webp
       female: false
       male: true
    -
       name: Bruce
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog46.webp
       female: false
       male: true
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog47.webp
       female: true
       male: false
    -
       name: Siren
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog48.webp
       female: true
       male: false
    -
       name: Nom Sod
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog49.webp
       female: false
       male: true
    -
       name: Laura
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog50.webp
       female: true
       male: false
    -
       name: Girl
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog51.webp
       female: true
       male: false
    -
       name: Billie
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog52.webp
       female: true
       male: false
    -
       name: Valentine
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog53.webp
       female: false
       male: true
    -
       name: Beatrice
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog54.webp
       female: true
       male: false
    -
       name: Goldie
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog55.webp
       female: true
       male: false
    -
       name: Amy
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog56.webp
       female: true
       male: false
    -
       name: Fred
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog57.webp
       female: false
       male: true
    -
       name: Fern
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog58.webp
       female: true
       male: false
    -
       name: Khalua
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog59.webp
       female: false
       male: true
    -
       name: Isabella
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog61.webp
       female: true
       male: false
    -
       name: Shay
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog62.webp
       female: false
       male: true
    -
       name: Harley
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog63.webp
       female: false
       male: false
    -
       name: Charlize
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog64.webp
       female: true
       male: false
    -
       name: Carter
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog65.webp
       female: false
       male: true
    -
       name: Amalou
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog66.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog67.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog68.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog69.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog70.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog71.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog72.webp
       female: true
       male: false
    -
       name: Grace
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog73.webp
       female: true
       male: false
    -
       name: Frankie
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog74.webp
       female: false
       male: true
    -
       name: Saylor
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog76.webp
       female: true
       male: false
    -
       name: Beau
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog77.webp
       female: false
       male: true
    -
       name: Nam Kaeng
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog78.webp
       female: false
       male: false
    -
       name: Happy
-      age: '1'
+      rescued-in: '1'
       dog_image: /images/dogs/dog79.webp
       female: false
       male: true
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog80.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog81.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog82.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog83.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog84.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog85.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog86.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog87.webp
       female: true
       male: false
    -
       name: Penny
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog88.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog89.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog90.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog91.webp
       female: true
       male: false
    -
       name: Tom
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog92.webp
       female: false
       male: true
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog93.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog94.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog95.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog96.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog97.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog98.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog99.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog101.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog102.webp
       female: true
       male: false
    -
       name: Bandit
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog104.webp
       female: false
       male: true
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog105.webp
       female: true
       male: false
    -
       name: melon
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog106.webp
       female: false
       male: true
    -
       name: Iris
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog107.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog109.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog110.webp
       female: true
       male: false
    -
       name: name
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog111.webp
       female: true
       male: false
    -
       name: Dixie
-      age:
+      rescued-in:
       dog_image: /images/dogs/dog112.webp
       female: true
       male: false
    -
       name: ''
-      age:
+      rescued-in:
       dog_image: ''
       female: true
       male: false
@@ -658,8 +658,12 @@ seo:
         <div class="col-3 center padded-1 margin-b-2">
             <div class="bg-image portrait" style="background-image: url('{{dog.dog_image}}');"></div>
             <h3 class="margin-t-1 margin-b-0">{{dog.name}}</h3>
-            <p class="margin-b-0">I am {{dog.age}} years old.</p>
-            {% if dog.male == true %}
+            
+            {% if dog.rescued-in %}
+            <p class="margin-b-0">I was rescued in {{dog.rescued-in}}.</p>
+            {% endif %}
+
+        {% if dog.male == true %}
                <p>I am male.</p>
             {% endif %}
             {% if dog.female == true %}
@@ -676,7 +680,11 @@ seo:
        <div class="col-4 center padded-1 margin-b-2">
            <div class="bg-image portrait" style="background-image: url('{{dog.dog_image}}');"></div>
            <h3 class="margin-t-1 margin-b-0">{{dog.name}}</h3>
-           <p class="margin-b-0">I am {{dog.age}} years old.</p>
+
+           {% if dog.rescued-in %}
+                <p class="margin-b-0">I was rescued in {{dog.rescued-in}}.</p>
+            {% endif %}
+
            {% if dog.male == true %}
               <p>I am male.</p>
            {% endif %}
